# pyrefly

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TENSOR_SHAPES_CONTRIBUTING.md  TSP_IMPLEMENTATION_PLAN.md  action.yml  empty.py  generate_protocol.py  test.py  test_diag.py  typeServerProtocol.schema.json  version.bzl
pyrefly/: Cargo.toml  glean_query_types.thrift  pyproject.toml  rust-toolchain
pyrefly/lib/: lib.rs  playground.rs  query.rs
pyrefly/lib/alt/: answers.rs  answers_solver.rs  attr.rs  call.rs  callable.rs  expr.rs  function.rs  jaxtyping.rs  mod.rs  narrow.rs  nn_module_specials.rs  operators.rs  overload.rs  singledispatch.rs  solve.rs  special_calls.rs  specials.rs  traits.rs  unwrap.rs
pyrefly/lib/binding/: attrs.rs  base_class.rs  binding.rs  bindings.rs  class.rs  django.rs  expr.rs  function.rs  metadata.rs  mod.rs  narrow.rs  pattern.rs  pytest.rs  scope.rs  stmt.rs  table.rs  target.rs
pyrefly/lib/commands/: all.rs  bazel_check.rs  buck_check.rs  check.rs  config_finder.rs  dump_config.rs  files.rs  infer.rs  init.rs  lsp.rs  mod.rs  report.rs  stubgen.rs  suppress.rs  tsp.rs  util.rs
pyrefly/lib/error/: baseline.rs  collector.rs  context.rs  display.rs  error.rs  expectation.rs  legacy.rs  signature_diff.rs  suppress.rs
pyrefly/lib/export/: definitions.rs  exports.rs  special.rs
pyrefly/lib/lsp/: mod.rs  module_helpers.rs  server.rs  server_interface.rs  workspace.rs
pyrefly/lib/module/: bundled.rs  finder.rs  parse.rs  typeshed.rs  typeshed_third_party.rs
pyrefly/lib/query/: type_table.rs
pyrefly/lib/report/: binding_memory.rs  debug_info.rs  mod.rs  trace.rs
pyrefly/lib/solver/: solver.rs  subset.rs  type_order.rs
pyrefly/lib/state/: dirty.rs  epoch.rs  errors.rs  ide.rs  load.rs  loader.rs  lsp.rs  mod.rs  module.rs  notebook.rs  pytest.rs  semantic_tokens.rs  state.rs  steps.rs  subscriber.rs
pyrefly/lib/stubgen/: emit.rs  extract.rs  mod.rs
pyrefly/lib/test/: abstract_methods.rs  annotation.rs  assign.rs  attribute_narrow.rs  attributes.rs  callable.rs  callable_residuals.rs  calls.rs  cinderx.rs  class_overrides.rs  class_subtyping.rs  class_super.rs  constructors.rs  contextual.rs  cycles.rs  dataclass_transform.rs  dataclasses.rs  decorators.rs  delayed_inference.rs  descriptors.rs  dict.rs  enums.rs  export_location.rs  flow_branching.rs  flow_looping.rs  generic_basic.rs  generic_callable_degeneracy.rs  generic_legacy.rs  generic_restrictions.rs  imports.rs  incremental.rs  inference.rs  literal.rs  mod.rs  mro.rs  named_tuple.rs  narrow.rs  new_type.rs  operators.rs  overload.rs  (+30 more)
pyrefly/lib/tsp/: TODO.md  common.rs  generate_protocol.py  mod.rs  protocol.rs  server.rs  type_conversion.rs  validation.rs
pyrefly/test_laziness/: OPPORTUNITIES.md  test_annotated_return_breaks_cascade.md  test_attribute_inherited.md  test_attribute_on_class_itself.md  test_bare_import_forces_exports.md  test_deprecated_forces_exports.md  test_duplicate_import_skips_is_final.md  test_export_exists_forces_exports.md  test_import_class_as_annotation.md  test_import_class_instantiated.md  test_import_function_called.md  test_import_function_unused.md  test_import_star_forces_exports.md  test_is_final_forces_exports.md  test_multiple_inheritance_solves_unique_fields.md  test_special_export_forces_exports.md  test_transitive_import_annotated.md  test_transitive_import_unannotated.md  test_unused_import_from_same_module.md
tensor-shapes/pyrefly-shape-extensions/: README.md  pyproject.toml
tensor-shapes/pyrefly-shape-extensions/shape_extensions/: __init__.py
tensor-shapes/pyrefly-torch-stubs/: README.md  pyproject.toml  run_pyrefly.py  run_runtime_tests.py
tensor-shapes/pyrefly-torch-stubs/examples/: apg.py  background_matting.py  bert.py  dcgan.py  deeprecommender.py  demucs.py  densenet.py  dlrm.py  drq.py  finalmlp.py  gptfast.py  learning_to_paint.py  llama.py  masknet.py  mixtral_moe.py  mobilenetv2.py  nanogpt.py  openpose.py  resnet.py  sam.py  soft_actor_critic.py  speech_transformer.py  squeezenet.py  stargan.py  super_slomo.py  tacotron2.py  tts_angular.py  unet.py  wavernn.py
tensor-shapes/pyrefly-torch-stubs/test/: pyrefly.toml  test_adaptive_pool_symbolic.py  test_arange_zero.py  test_assert_type_tensor.py  test_canonicalization.py  test_class_generics_verify.py  test_comparison_simple.py  test_conv2d_tuple.py  test_debug_div.py  test_demos.py  test_dim_binding_debug.py  test_dim_comprehensive.py  test_division_factoring.py  test_dropout.py  test_dynamic_init.py  test_fancy_indexing.py  test_general_unpacked_matching.py  test_gru.py  test_indexing_typed.py  test_int_type_var.py  test_issue_03_direct_self_attr.py  (+80 more)
(+1244 files in other folders)
