[patch.crates-io]
backtrace = { git = "https://github.com/rust-lang/backtrace-rs", rev = "df979dcf80027eb047d7bb9e0874710c15009f31" }
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "7dc6e324b1788a6b7fb9f3a1953c512923a3e9f0" }
quickcheck = { git = "https://github.com/jakoschiko/quickcheck", rev = "6ecdf5bb4b0132ce66670b4d46453aa022ea892c" }
rustversion = { git = "https://github.com/fbsource/rustversion", rev = "3f072e049635b7463275fc4edebbbed3840d9297" }

[profile.release]
debug = 1
lto = true
codegen-units = 1
strip = "debuginfo"

[workspace]
members = [
  "crates/pyrefly_build",
  "crates/pyrefly_bundled",
  "crates/pyrefly_config",
  "crates/pyrefly_derive",
  "crates/pyrefly_graph",
  "crates/pyrefly_python",
  "crates/pyrefly_types",
  "crates/pyrefly_util",
  "crates/tsp_types",
  "pyrefly",
  "pyrefly_wasm",
]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/facebook/pyrefly"
