[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
python-source = "python"
module-name = "pyrefly"
strip = false
include = ["rust-toolchain"]

[project.urls]
homepage = "https://pyrefly.org"
documentation = "https://pyrefly.org/en/docs/"

[project]
name = "pyrefly"
description = "A fast type checker and language server for Python with powerful IDE features"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["typechecker", "typechecking"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Developers",
  "Topic :: Software Development"
]
