[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrefly-shape-extensions"
description = "Shape typing primitives and DSL for Pyrefly tensor shape tracking"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
version = "0.0.0"
keywords = ["typechecker", "typechecking", "shapes", "tensor", "pyrefly"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://pyrefly.org"
documentation = "https://pyrefly.org/en/docs/"

[tool.hatch.build.targets.wheel]
packages = ["shape_extensions"]

[tool.hatch.build.targets.sdist]
include = ["shape_extensions/", "README.md", "LICENSE"]
